Fix bar graph alignment due to Bootstrap changes

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -208,6 +208,10 @@ select.date-select {
 
 /* home page graph */
 
+svg {
+  vertical-align: inherit;
+}
+
 .graph-bar {
   fill: $primary;
 }
